@@ -4,45 +4,45 @@ ms.topic: troubleshooting
 ms.prod: xamarin
 ms.assetid: 62FAF21C-8090-4AF3-9D88-05A4CFCAFFDC
 ms.technology: xamarin-android
-author: conceptdev
-ms.author: crdun
+author: davidortinau
+ms.author: daortin
 ms.date: 06/02/2018
-ms.openlocfilehash: 4a3f3849725f0d3b8e8bc8d43c1cd3f87f044616
-ms.sourcegitcommit: 57f815bf0024b1afe9754c0e28054fc0a53ce302
+ms.openlocfilehash: 9c9b9f5a205a2eef7db9f27e8d09b10ce65a4318
+ms.sourcegitcommit: 2fbe4932a319af4ebc829f65eb1fb1816ba305d3
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/06/2019
-ms.locfileid: "70761046"
+ms.lasthandoff: 10/29/2019
+ms.locfileid: "73027056"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Réglage des paramètres de mémoire Java pour le concepteur Android
 
-Les paramètres de mémoire par défaut utilisés lors du démarrage `java` du processus pour Android Designer peuvent être incompatibles avec certaines configurations système.
+Les paramètres de mémoire par défaut utilisés lors du démarrage du processus de `java` pour le concepteur Android peuvent être incompatibles avec certaines configurations système.
 
 À partir de Xamarin Studio 5.7.2.7 (et versions ultérieures, Visual Studio pour Mac) et Visual Studio Tools pour Xamarin 3.9.344, ces paramètres peuvent être personnalisés pour chaque projet.
 
 ## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Nouvelles propriétés du concepteur Android et options java correspondantes
 
-Les noms de propriété suivants correspondent à l' [option de ligne de commande](http://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) Java indiquée
+Les noms de propriété suivants correspondent à l' [option de ligne de commande](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) Java indiquée
 
-- **AndroidDesignerJavaRendererMinMemory** -Xms
+- **AndroidDesignerJavaRendererMinMemory** -XMS
 
 - **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** -XX : MaxPermSize
 
 # <a name="visual-studiotabwindows"></a>[Visual Studio](#tab/windows)
 
 1. Ouvrez votre solution dans Visual Studio.
 
-2. Sélectionnez chaque projet Android un par un dans le Explorateur de solutions, puis cliquez sur [Afficher tous les fichiers](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) deux fois sur chaque projet. Vous pouvez ignorer des projets qui ne contiennent aucun `.axml` fichier de disposition. Cette étape permet de s’assurer que chaque répertoire de `.csproj.user` projet contient un fichier.
+2. Sélectionnez chaque projet Android un par un dans le Explorateur de solutions, puis cliquez sur [Afficher tous les fichiers](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) deux fois sur chaque projet. Vous pouvez ignorer des projets qui ne contiennent aucun fichier de disposition `.axml`. Cette étape permet de s’assurer que chaque répertoire de projet contient un fichier `.csproj.user`.
 
 3. Quittez Visual Studio.
 
-4. Recherchez le `.csproj.user` fichier pour chacun des projets de l’étape 2.
+4. Recherchez le fichier `.csproj.user` pour chacun des projets de l’étape 2.
 
 5. Modifiez chaque `.csproj.user` fichier dans un éditeur de texte.
 
-6. Ajoutez tout ou partie des nouvelles propriétés de mémoire du concepteur Android dans `<PropertyGroup>` un élément. Vous pouvez utiliser un existant `<PropertyGroup>` ou en créer un nouveau. Voici un exemple `.csproj.user` de fichier complet qui comprend les 3 attributs définis sur leurs valeurs par défaut :
+6. Ajoutez tout ou partie des nouvelles propriétés de mémoire Android Designer dans un élément `<PropertyGroup>`. Vous pouvez utiliser un `<PropertyGroup>` existant ou en créer un nouveau. Voici un exemple complet `.csproj.user` fichier qui comprend les 3 attributs définis sur leurs valeurs par défaut :
 
     ```xml
     <?xml version="1.0" encoding="utf-8"?>
@@ -58,29 +58,29 @@ Les noms de propriété suivants correspondent à l' [option de ligne de command
     </Project>
     ```
 
-7. Enregistrez et fermez tous les fichiers mis `.csproj.user` à jour.
+7. Enregistrez et fermez tous les fichiers de `.csproj.user` mis à jour.
 
 8. Redémarrez Visual Studio et rouvrez votre solution.
 
 # <a name="visual-studio-for-mactabmacos"></a>[Visual Studio pour Mac](#tab/macos)
 
-1. Ouvrez votre solution dans Visual Studio pour Mac pour vous assurer que le répertoire de `.userprefs` la solution contient un fichier.
+1. Ouvrez votre solution dans Visual Studio pour Mac pour vous assurer que le répertoire de la solution contient un fichier `.userprefs`.
 
 2. Quittez Visual Studio pour Mac.
 
-3. Localisez `.userprefs` le fichier dans le répertoire de la solution.
+3. Localisez le fichier `.userprefs` dans le répertoire de la solution.
 
-4. Modifiez le `.userprefs` fichier dans un éditeur de texte.
+4. Modifiez le fichier `.userprefs` dans un éditeur de texte.
 
-5. Localisez l’élément XML existant au format suivant. La dernière partie du nom de cet élément correspondra au nom de votre projet : « AndroidApplication1 » dans cet exemple :
+5. Localisez l’élément XML existant au format suivant. La dernière partie de ce nom d’élément correspondra au nom de votre projet : « AndroidApplication1 » dans cet exemple :
 
     ```xml
     <MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >
     ```
 
-6. Si l' `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` élément n’existe pas, créez-le n’importe où dans `<Properties>` l’élément englobant. Veillez à remplacer « AndroidApplication1 » par le nom de votre projet.
+6. Si l’élément `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` n’existe pas, créez-le n’importe où dans l’élément englobant `<Properties>`. Veillez à remplacer « AndroidApplication1 » par le nom de votre projet.
 
-7. Ajoutez tout ou partie des nouvelles propriétés de mémoire du concepteur Android comme attributs sur l’élément. Voici un exemple `.userprefs` de fichier complet qui comprend les 3 attributs définis sur leurs valeurs par défaut :
+7. Ajoutez tout ou partie des nouvelles propriétés de mémoire du concepteur Android comme attributs sur l’élément. Voici un exemple complet `.userprefs` fichier qui comprend les 3 attributs définis sur leurs valeurs par défaut :
 
     ```xml
     <Properties StartupItem="AndroidApplication1\AndroidApplication1.csproj">
@@ -94,9 +94,9 @@ Les noms de propriété suivants correspondent à l' [option de ligne de command
     </Properties>
     ```
 
-8. Répétez les étapes 5-7 pour chaque projet Android dans la solution qui `.axml` contient tous les fichiers de disposition. (Autrement dit, ajoutez un `<MonoDevelop.Ide.ItemProperties.ProjectName>` élément pour chaque projet.)
+8. Répétez les étapes 5-7 pour chaque projet Android dans la solution qui contient des fichiers de disposition de `.axml`. (Autrement dit, ajoutez un élément `<MonoDevelop.Ide.ItemProperties.ProjectName>` pour chaque projet.)
 
-9. Enregistrez et fermez le `.userprefs` fichier.
+9. Enregistrez et fermez le fichier `.userprefs`.
 
 10. Redémarrez Visual Studio pour Mac et rouvrez votre solution.
 
